# ChangeLog for app-office/gnumeric
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/gnumeric/ChangeLog,v 1.174 2008/08/03 20:01:37 eva Exp $

  03 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -gnumeric-1.8.2.ebuild, gnumeric-1.8.3.ebuild:
  add check for svg support in cairo, bug #232765.

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> gnumeric-1.8.3.ebuild:
  Stable for HPPA (bug #230031).

  05 Jul 2008; Markus Meier <maekke@gentoo.org> gnumeric-1.8.3.ebuild:
  x86 stable, bug #230031

  30 Jun 2008; nixnut <nixnut@gentoo.org> gnumeric-1.8.3.ebuild:
  Stable on ppc wrt bug 230031

  30 Jun 2008; Raúl Porcel <armin76@gentoo.org> gnumeric-1.8.3.ebuild:
  alpha/ia64/sparc stable wrt #230071

  30 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> gnumeric-1.8.3.ebuild:
  amd64 stable, bug #230031

  29 Jun 2008; Markus Rothe <corsair@gentoo.org> gnumeric-1.8.3.ebuild:
  Stable on ppc64; bug #230031

*gnumeric-1.8.3 (25 May 2008)

  25 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnumeric-1.8.3.ebuild:
  bump to 1.8.3. Bug fixes.

  21 Apr 2008; Markus Meier <maekke@gentoo.org> gnumeric-1.8.2.ebuild:
  amd64/x86 stable, bug #218022

  19 Apr 2008; Markus Rothe <corsair@gentoo.org> gnumeric-1.8.2.ebuild:
  Stable on ppc64; bug #218022

  18 Apr 2008; nixnut <nixnut@gentoo.org> gnumeric-1.8.2.ebuild:
  Stable on ppc wrt bug 218022

  17 Apr 2008; Jeroen Roovers <jer@gentoo.org> gnumeric-1.8.2.ebuild:
  Stable for HPPA (bug #218022).

  17 Apr 2008; Raúl Porcel <armin76@gentoo.org> gnumeric-1.8.2.ebuild:
  alpha/ia64/sparc stable wrt #218022

*gnumeric-1.8.2 (09 Mar 2008)

  09 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gnumeric-1.8.0-omf.patch, -gnumeric-1.6.3.ebuild,
  -gnumeric-1.8.0.ebuild, +gnumeric-1.8.2.ebuild:
  bump to 1.8.2, bug fix release only, remove old revisions

  10 Feb 2008; Olivier Crête <tester@gentoo.org> gnumeric-1.8.1.ebuild:
  Stable for amd64, bug #208356
