@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/Attic/goffice-0.6.5.ebuild,v 1.1 2008/09/03 21:56:12 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/Attic/goffice-0.6.5.ebuild,v 1.2 2008/09/28 07:59:23 aballier Exp $
 
 inherit eutils gnome2 flag-o-matic
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://freshmeat.net/projects/goffice/"
 
 LICENSE="GPL-2"
 SLOT="0.6"
-KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+KEYWORDS="~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 IUSE="doc gnome"
 
 # Raising glib dep to 2.14 to drop pcre dependency
