@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/goffice
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.52 2008/09/03 21:56:12 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/goffice/ChangeLog,v 1.53 2008/09/28 07:59:23 aballier Exp $
+
+  28 Sep 2008; Alexis Ballier <aballier@gentoo.org> goffice-0.6.5.ebuild:
+  keyword ~x86-fbsd
 
 *goffice-0.6.5 (03 Sep 2008)
 
