@@ -1,6 +1,9 @@
 # ChangeLog for app-office/gnumeric
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/gnumeric/ChangeLog,v 1.174 2008/08/03 20:01:37 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/gnumeric/ChangeLog,v 1.175 2008/09/28 07:59:43 aballier Exp $
+
+  28 Sep 2008; Alexis Ballier <aballier@gentoo.org> gnumeric-1.8.3.ebuild:
+  keyword ~x86-fbsd
 
   03 Aug 2008; Gilles Dartiguelongue <eva@gentoo.org>
   -gnumeric-1.8.2.ebuild, gnumeric-1.8.3.ebuild:
